--- a/public/css/scss/_find.scss
+++ b/public/css/scss/_find.scss
@@ -134,9 +134,6 @@
     .idWrap {
       margin-bottom: 10px;
     }
-    button[type="submit"] {
-      margin-bottom: 33px;
-    }
     .resultWrap .result {
       font-family: $NotoSansKR;
       font-size: 22px;
